-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.0 Beta1
-
None
-
macOS 13.4
-
-
fc195216a (dev), b0b918821 (6.6), 627ccf915 (6.5), d6da840dc (tqtc/lts-6.2)
-
Foundation Sprint 86
Steps to reproduce:
- Open SatelliteInfo example from Qt 6.6.0 b1 https://doc.qt.io/qt-6/qtpositioning-satelliteinfo-example.html
- Build and run the app on macOS.
- Click Stop/Single/Start quickly several times (I think the app will freeze anyway after some time, but that was the easiest way of reproducing the issue I found).
- Leave the app for some time.
- Get back to the app and click the button once again.
- Repeat steps 3-5 if the app did not freeze.
Expected: The app does not freeze.
Actual: The app stops responding, CPU usage increases to 100%.
Reproducibility: 100%
- relates to
-
QTQAINFRA-5592
Qt Test Attack - Q2, 2023
-
- Open
-
- resulted in
-
QTBUG-115217 NMEA SatelliteInfo Simulation mode stops providing updates
-
- Closed
-