NMEA SatelliteInfo simulation reader: prevent an infinite loop

... when all the simulation data is read from the file.

Fixes: QTBUG-114657
Change-Id: I44c1290078335148aa160410c4b8368444ccad47
Reviewed-by: Ievgenii Meshcheriakov <ievgenii.meshcheriakov@qt.io>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
(cherry picked from commit fc195216a943b25a09ac5f4d7853ff0734fc19eb)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>